--- a/settings.html
+++ b/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Article Summarizer - Settings</title>
+  <title>ReadInShort - Settings</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
