--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Article Summarizer</title>
+  <title>ReadInShort</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Article Summarizer</h1>
+    <h1>ReadInShort</h1>
 
     <div id="initial-view">
       <button id="summarize-btn" class="btn primary-btn">Summarise</button>
