--- a/src/popup.html
+++ b/src/popup.html
@@ -28,6 +28,7 @@
   </div>
 
   <script src="assets/marked.min.js"></script>
+  <script src="browser-polyfill.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
