--- a/src/settings.html
+++ b/src/settings.html
@@ -38,7 +38,7 @@
         <li>Create a new API key</li>
         <li>Copy and paste the key above</li>
       </ol>
-      <p><strong>Note:</strong> Your API key is stored locally on your device and is only used to make requests to the OpenAI API.</p>
+      <p><strong>Note:</strong> Your API key is stored on your device and is only used to make requests to the OpenAI API.</p>
     </div>
   </div>
 
