--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>ReadInShort</h1>
+    <div class="header">
+      <h1>ReadInShort</h1>
+      <a href="settings.html" id="settings-btn" title="Settings">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
+        </svg>
+      </a>
+    </div>
 
     <div id="initial-view">
       <button id="summarize-btn" class="btn primary-btn">Summarise</button>
@@ -20,10 +27,6 @@
     <div id="summary-view" class="hidden">
       <div id="summary-content"></div>
       <button id="reset-btn" class="btn primary-btn">Reset</button>
-    </div>
-
-    <div class="footer">
-      <a href="settings.html" target="_blank">Settings</a>
     </div>
   </div>
 
